--- a/issue/nppr.css
+++ b/issue/nppr.css
@@ -83,7 +83,8 @@ h4{
 }
 .homepageItem{
     font-weight:bold;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     list-style-type: none;
     
     -webkit-user-select: none; /* Safari */        
@@ -96,6 +97,32 @@ h4{
 }
 .homepageDescription{
     display:none;
+    padding: 10 20 20 20;
+}
+.homepageSubItemUl{
+}
+.homepageSubItemLI{
+    margin-bottom: 5px;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    font-weight: normal;
+    list-style-type: none;
+}
+.homepageSubItemLI:hover{
+    cursor: pointer;
+}
+.expand{
+    margin-top: 10px; 
+    justify-content: center; 
+    display:flex;
+}
+.expandL{
+    padding-right:10px
+}
+.expandR{
+    padding-left: 10px
 }
 @media screen and (min-width: 650px) {
     .row{
@@ -127,7 +154,7 @@ h4{
     }
     .media{
         width: 100%;
-    height: 28%;
+        height: 28%;
     }
 }
 @media screen and (max-width: 649px) {
